# jobs-are-the-way

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: daily-db-cleanup-prod.yml  hourly-message-dev.yml  hourly-message-prod.yml  hourly-message.yml
alembic/: env.py
alembic/versions/: 2c959be484b8_init.py  6899c6bba458_added_job_results_table.py  cc1c49f9aee1_added_index_on_job_id.py  d1023561952d_add_new_workflow_runs_table.py  fe308a5d4f58_added_new_completed_column_in_workflow_.py
scripts/: clean_db.py
src/: constants.py  helper.py  main.py  utils.py
src/core/: config.py
src/db/: base.py  job_results.py  models.py  pg.py  postgres.py  utils.py
src/db/models/: __init__.py  base.py  job_results.py  workflow_runs.py
src/db/repositories/: __init__.py  base.py  job_results.py  workflow_runs.py
src/helper/: job_search.py  retry.py  telegram.py
src/helper/llm/: constants.py  llm_client.py  models.py  prompts.py
src/helper/llm/client/: __init__.py  base.py  huggingface.py  openrouter.py
src/jobs/: constants.py  search.py
src/telegram/: bot.py
