[project]
name = "jobs-are-the-way"
version = "0.1.0"
description = "Project to automate job sending on Telegram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==1.26.3",
    "python-dotenv==1.2.1",
    "python-jobspy==1.1.82",
    "python-telegram-bot==22.5",
    "loguru==0.7.3",
    "pre-commit==4.5.1",
    "pip>=25.3",
    "tenacity==9.1.2",
    "tornado==6.5.4",
]

[project.optional-dependencies]
dev = [
  "ipykernel==7.1.0",
  "black==25.12.0",
  "isort==7.0.0",
  "flake8==7.3.0"
]

[tool.isort]
profile = "black"
multi_line_output = 3
use_parentheses = true
skip = [".gitignore"]

# Section Headings
import_heading_stdlib = "Standard Library Packages"
import_heading_thirdparty = "Third Party Packages"
import_heading_firstparty = "Local Project"
